--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,18 @@
             <version>4.3.19.RELEASE</version>
         </dependency>
 
+        <!--  spring-aop 面向切面编程 -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>4.3.19.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>4.3.19.RELEASE</version>
+        </dependency>
+
 
     </dependencies>
 
