--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
             <version>4.3.19.RELEASE</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjrt -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.9.2</version>
+        </dependency>
 
     </dependencies>
 
