[ADD] spring JDBC template 操作 数据库

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,8 @@
 
+
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/spring-in-action?autoReconnect=true&useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://localhost:3306/spring-in-action
+#jdbc.url=jdbc:mysql://localhost:3306/spring-in-action?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=123456
 
@@ -13,10 +15,14 @@ druid.url=jdbc:mysql://127.0.0.1:3306/spring-in-action?characterEncoding=UTF-8&a
 druid.username=root
 druid.password=123456
 
-
+# 连接池启动时会创建5个连接；当需要的时候，允许BasicDataSource创
+#建新的连接，但最大活跃连接数为300。
 #初始化大小，最小，最大
+# 池启动时创建的连接数量
 druid.initialSize=5
+#  池里不会被释放的最多空闲连接数。如果设置为0，表示无限
 druid.minIdle=10
+#  同一时间可从池中分配的最多连接数。如果设置为0，表示无限制
 druid.maxActive=300
 #配置获取连接等待超时的时间
 druid.maxWait=60000
