--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,39 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <groovy.version>2.4.1</groovy.version>
+
+        <!-- 作者建议jar包的版本 -->
+        <springVersion>5.1.2.RELEASE</springVersion>
+        <springWebVersion>5.1.3.RELEASE</springWebVersion>
+        <springAMQPVersion>1.0.0.RELEASE</springAMQPVersion>
+        <springDataJpaVersion>1.3.2.RELEASE</springDataJpaVersion>
+        <springSecurityVersion>3.2.0.RELEASE</springSecurityVersion>
+        <springWebflowVersion>2.4.1.RELEASE</springWebflowVersion>
+        <activeMQVersion>5.7.0</activeMQVersion>
+        <aspectJVersion>1.7.2</aspectJVersion>
+        <commonsLangVersion>3.1</commonsLangVersion>
+        <ehcacheVersion>2.7.4</ehcacheVersion>
+        <ehcacheJCacheVersion>1.4.0-beta1</ehcacheJCacheVersion>
+        <h2Version>1.4.182</h2Version>
+        <hamcrestVersion>1.3</hamcrestVersion>
+        <hibernateVersion>4.1.6.Final</hibernateVersion>
+        <hibernateEntityManagerVersion>4.0.1.Final</hibernateEntityManagerVersion>
+        <hibernateValidatorVersion>5.0.1.Final</hibernateValidatorVersion>
+        <jacksonVersion>2.4.3</jacksonVersion>
+        <javaxMailVersion>1.4.7</javaxMailVersion>
+        <jspApiVersion>2.1</jspApiVersion>
+        <jspElVersion>2.2.4</jspElVersion>
+        <jstlVersion>1.2</jstlVersion>
+        <junitVersion>4.11</junitVersion>
+        <log4jVersion>1.2.14</log4jVersion>
+        <mockitoVersion>1.9.5</mockitoVersion>
+        <servletApiVersion>3.1.0</servletApiVersion>
+        <slf4jVersion>1.7.5</slf4jVersion>
+        <systemRulesVersion>1.5.0</systemRulesVersion>
+        <thymeleafVersion>2.1.3.RELEASE</thymeleafVersion>
+        <tilesVersion>3.0.1</tilesVersion>
+
+        <!-- 读者自定义引入 -->
     </properties>
 
     <dependencies>
@@ -22,39 +55,39 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.3.19.RELEASE</version>
+            <version>${springVersion}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junitVersion}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
+       <!-- <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>4.3.19.RELEASE</version>
+            <version>${springVersion}</version>
             <scope>test</scope>
         </dependency>
+-->
 
-
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.7</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-            <version>4.3.19.RELEASE</version>
+            <version>${commonsLangVersion}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
             <version>2.1.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${springVersion}</version>
+        </dependency>
+
 
        <!-- 数据库连接使用-->
          <dependency>
@@ -63,40 +96,44 @@
             <version>1.4</version>
         </dependency>
 
-        <dependency>
+     <!--   <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>4.3.19.RELEASE</version>
-        </dependency>
-
+            <version>${springVersion}</version>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>4.3.19.RELEASE</version>
+            <version>4.3.18.RELEASE</version>
         </dependency>
-
+       <!-- <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${springVersion}</version>
+        </dependency>
+-->
         <!--  spring-aop 面向切面编程 -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
-            <version>4.3.19.RELEASE</version>
+            <version>${springVersion}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
-            <version>4.3.19.RELEASE</version>
+            <version>${springVersion}</version>
         </dependency>
 
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
-            <version>1.9.2</version>
+            <version>${aspectJVersion}</version>
         </dependency>
 
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf</artifactId>
-            <version>2.1.4.RELEASE</version>
+            <version>${thymeleafVersion}</version>
         </dependency>
       <!--  <dependency>
             <groupId>org.thymeleaf</groupId>
@@ -107,20 +144,15 @@
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring3</artifactId>
-            <version>2.1.2.RELEASE</version>
+            <version>${thymeleafVersion}</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/nz.net.ultraq.thymeleaf/thymeleaf-layout-dialect -->
-        <dependency>
-            <groupId>nz.net.ultraq.thymeleaf</groupId>
-            <artifactId>thymeleaf-layout-dialect</artifactId>
-            <version>2.3.0</version>
-        </dependency>
+
         <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.4.182</version>
+            <version>${h2Version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -130,18 +162,6 @@
             <version>1.8.0-beta2</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.attoparser/attoparser -->
-        <dependency>
-            <groupId>org.attoparser</groupId>
-            <artifactId>attoparser</artifactId>
-            <version>2.0.4.RELEASE</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.unbescape/unbescape -->
-        <dependency>
-            <groupId>org.unbescape</groupId>
-            <artifactId>unbescape</artifactId>
-            <version>1.1.6.RELEASE</version>
-        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -161,19 +181,17 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
-            <version>5.1.2.RELEASE</version>
+            <version>${springSecurityVersion}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
-            <version>4.2.3.RELEASE</version>
+            <version>${springSecurityVersion}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
-            <version>4.2.3.RELEASE</version>
+            <version>${springSecurityVersion}</version>
         </dependency>
 
         <dependency>
@@ -222,12 +240,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.baidu.aip</groupId>
-            <artifactId>java-sdk</artifactId>
-            <version>4.1.1</version>
-        </dependency>
-
-        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
@@ -244,7 +256,22 @@
             <artifactId>druid</artifactId>
             <version>1.0.24</version>
         </dependency>
-        
+        <!--<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>5.1.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.1.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>5.1.2.RELEASE</version>
+        </dependency>-->
+
     </dependencies>
 
 
